--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
                 <ul>
                     <li><a href="index.html" class="active" >Home</a></li>
-                    <li><a href="" >About DxGPT</a></li>
+                    <li><a href="about.html" >About DxGPT</a></li>
                     <li><a href="">About us</a></li>
                     <li><a href="">Integration</a></li>
                     <li><a href="">Collaboration</a></li>
@@ -178,5 +178,6 @@ The goal is to enhance—not replace—clinical judgment: save time, neutralize 
  
 <script src="script.js"></script>
   </body>
+
 
 </html>
